...
                      label="Node Name"
                      value={name}
                      placeholder="Enter Node Name"
                      onChangeText={(nodeName) => this.setState({ name: nodeName })}
                    />
                    <Field
                      testID="NodeManualMAC"
                      label="MAC Address"
                      value={mac.toUpperCase()}
                      placeholder="Enter MAC Address"
                      autoCapitalize="characters"
                      editable={!!(isEditableMAC || isNodeEdit)}
                      onChangeText={(text) => this.changeMacAddress(text)}
                      onEndEditing={() => this.endEditingMac()}
                    />
                  </View>

                  <SelectBox
                    testID="NodeManualAssociatedNetwork"
                    title="Associated network"
                    subTitle={associatedNetwork ? associatedNetwork.name : 'Network name'}
                    onPress={!isNewNetwork ? this.onSelectAssociatedNetwork : null}
                  />
                  {isNetConnected ? (
                    <SelectBox
                      testID="NodeManualLocation"
                      title="Location"
                      subTitle={location && location.address.length > 3 ? location.address : 'Adress, City, Index'}
                      onPress={this.onLocationSelect}
                    />
                  ) : (
                    <>
...
                      </View>
                    </>
                  )}
                </View>
              </ScrollView>
              <View>
                <Button active testID="NodeManualSetup" text={buttonTitle} disabled={this.props.connecting || this.state.bleForceDisconnect} onPress={this.preActionWithNode} />
                <Button text="Cancel" disabled={this.props.connecting || this.state.bleForceDisconnect} onPress={this.onPressCancel} />
              </View>
            </View>
          </DefaultHeaderHOC>
        )}
      </ManageThemeContext.Consumer>
...
