...
                    ...styles.section,
                    backgroundColor: theme.primaryCardBgr,
                    borderColor: theme.primaryBorder,
                  }}>
                  <View style={styles.fieldWrap}>
                    <Field
                      testID="CreateNetworkName"
                      label="Network name"
                      placeholder="Enter network name"
                      onChangeText={text => this.setState({ networkName: text })}
                    />
                  </View>

                  <SelectBox
                    testID="CreateNetworkLocation"
                    disableBorderBottom
                    title="Location"
                    subTitle={this.state.full_address || 'Street, City, Zip Code'}
                    onPress={this.onSelectLocation}
                  />
                </View>
...
